# protoprimer

./: .editorconfig  .gitignore  LICENSE  next.readme.md  prime  readme.md
src/dummy_private/: .gitignore  pyproject.toml
src/local_auth/: .gitignore  pyproject.toml
src/local_repo/: .gitignore  pyproject.toml  setup.py
src/local_repo/main/local_repo/: cmd_bootstrap_env.py  cmd_dev_shell.py  cmd_gcloud_artifact_repo.py  cmd_gen_next_doc_id.py  cmd_hello_world.py  cmd_install_pre_commit.py  cmd_pre_commit_for_all.py  cmd_prime_env.py  cmd_print_graph.py  cmd_publish_package.py  cmd_report_coverage.py  cmd_squash_and_push.py  cmd_test_python_version.py  cmd_venv_shell.py  graph_printer.py  sub_proc_util.py
src/local_repo/main/local_repo/misc_tools/: __init__.py  code_utils.py  graph_utils.py
src/local_repo/test/test_local_repo/: test_cmd_gen_next_doc_id.py
src/local_repo/test/test_local_repo/test_fast_fat_min_mocked/: test_GraphPrinterMermaid.py  test_GraphPrinterPython.py  test_GraphPrinterTextFlat.py  test_GraphPrinterTextNested.py  test_cmd_print_graph.py  test_graph_printer.py
src/local_repo/test/test_local_repo/test_misc_tools/: test_code_utils.py  test_graph_utils.py
src/local_repo/test/test_local_repo/test_slow_integrated/: conftest.py  test_cmd_bootstrap_env.py  test_cmd_prime_env.py  test_project_description.py
src/local_test/: .gitignore  pyproject.toml  setup.py
src/local_test/main/local_test/: __init__.py  base_test_class.py  case_condition.py  cmd_check_context_isolation.py  config_node.py  consistent_naming.py  fat_mocked_helper.py  integrated_helper.py  line_number.py  mock_environ.py  mock_subprocess.py  mock_verifier.py  name_assertion.py  package_version_verifier.py  repo_tree.py  toml_handler.py  verified_dynamic_graph.py
src/local_test/test/test_backward_compatibility/test_CLI/: test_via_cliff.py
src/local_test/test/test_local_test/: test_any_to_bool.py  test_consistent_naming.py  test_dummy.py  test_verified_dynamic_graph.py
src/metaprimer/: .gitignore  pyproject.toml
src/metaprimer/main/metaprimer/: cmd_eval_conf.py  cmd_venv_shell.py  conf_renderer.py  pre_commit.py  script_lib.py  venv_shell.py
src/metaprimer/test/test_metaprimer/test_conf_renderer/: test_RootNode_client.py  test_RootNode_derived.py  test_RootNode_env.py  test_RootNode_input.py  test_RootNode_primer.py  test_abstract_config.py
src/metaprimer/test/test_metaprimer/test_slow_integrated/: conftest.py  test_cmd_eval_conf.py  test_cmd_venv_shell.py
src/neoprimer/: .gitignore  pyproject.toml
src/neoprimer/main/neoprimer/: __init__.py  cmd_eval_conf.py  cmd_install_pre_commit.py  cmd_venv_shell.py  conf_renderer.py  pre_commit.py  venv_shell.py
src/neoprimer/test/test_neoprimer/test_conf_renderer/: test_RootNode_client.py  test_RootNode_derived.py  test_RootNode_env.py  test_RootNode_input.py  test_RootNode_primer.py  test_abstract_config.py
src/neoprimer/test/test_neoprimer/test_other/: test_protoprimer_version.py
src/neoprimer/test/test_neoprimer/test_slow_integrated/: test_cmd_eval_conf.py  test_cmd_install_pre_commit.py  test_cmd_venv_shell.py
src/neoprimer/test/test_neoprimer/test_venv_shell/: test_state_activated_venv_shell_started.py
src/protoprimer/: .gitignore  pyproject.toml  setup.py
src/protoprimer/main/protoprimer/: __init__.py  primer_kernel.py  proto_generator.py
src/protoprimer/test/: conftest.py
src/protoprimer/test/test_protoprimer/: test_argparse_assumptions.py  test_ensure_min_python_version.py  test_integrated_scenarios.py  test_module_name_extraction.py  test_state_client_conf_file_data.py  test_state_env_conf_dir_path_verified.py  test_state_proto_kernel_updated.py  test_state_protoprimer_package_installed.py  test_state_py_exec_selected.py  test_state_target_dst_dir_path_verified.py
src/protoprimer/test/test_protoprimer/misc_tools/: code_utils.py  mock_verifier.py  test_graph_utils.py
src/protoprimer/test/test_protoprimer/test_fast_fat_min_mocked/: test_plain_proto_code_in_prime_mode.py
src/protoprimer/test/test_protoprimer/test_field_wizard/: test_wizard_field_primer_conf_client_file_rel_path.py  test_wizard_field_primer_ref_root_dir_rel_path.py
src/protoprimer/test/test_protoprimer/test_func/: test_delegate_to_venv.py  test_ensure_min_python_version.py  test_install_editable_project.py
src/protoprimer/test/test_protoprimer/test_func_simple/: test_delegate_to_venv.py  test_get_path_to_base_python.py  test_install_editable_project.py  test_switch_python.py
src/protoprimer/test/test_protoprimer/test_func_wizard/: test_read_field_env_build_root_dir_rel_path.py  test_warn_if_not_wizard_able_field_env_build_root_dir_rel_path.py  test_wizard_conf_leap.py  test_wizard_print_summary.py
src/protoprimer/test/test_protoprimer/test_graph/: test_target_dependencies.py
src/protoprimer/test/test_protoprimer/test_integrated/: __init__.py  integrated_helper.py  test_invalid_args_primer_kernel.py  test_plain_proto_code.py  test_plain_proto_code_in_auto_mode.py  test_plain_proto_code_in_wizard_mode.py  test_python_executable.py  test_reinstall_option.py
src/protoprimer/test/test_protoprimer/test_log_formatter/: test_DefaultFileLogFormatter.py  test_DefaultStderrLogFormatter.py  test_FileLogFormatter.py  test_PrimerFileLogFormatter.py  test_PrimerStderrLogFormatter.py  test_StderrLogFormatter.py  test_UtcTimeFormatter.py
src/protoprimer/test/test_protoprimer/test_naming/: naming_metadata.py  naming_test_base.py  test_name_CommandArg.py  test_name_ConfField.py  test_name_EnvState.py  test_naming_metadata.py
src/protoprimer/test/test_protoprimer/test_ordering/: test_definition_order.py
src/protoprimer/test/test_protoprimer/test_other/: test_argparse_assumptions.py  test_delegate_to_venv.py  test_ensure_min_python_version.py  test_install_editable_project.py  test_integrated_scenarios.py  test_module_name_extraction.py  test_report_success_status.py  test_switch_from_py_exec_unknown.py
src/protoprimer/test/test_protoprimer/test_run_mode/: test_run_mode_dag.py  test_run_mode_graph.py  test_run_mode_print_dag.py
(+675 files in other folders)
