[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
# This is a private package to be installed only into private artifact repo.
# NOTE: It is not used automatically - it exists only for manual tests.
# See: FT_17_41_51_83.private_artifact_repo.md.
name = "dummy_private"
version = "0.0.0.dev0"

classifiers = [
    # This package is local and is never published:
    "Private :: Do Not Upload",
]

# FT_84_11_73_28.supported_python_versions.md:
requires-python = ">=3.7"

dependencies = [
    "setuptools",
]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
dummy_private = "./main/dummy_private"
