[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "local_repo"
version = "0.0.0"

classifiers = [
    # This package is local and is never published:
    "Private :: Do Not Upload",
]

# FT_84_11_73_28.supported_python_versions.md:
requires-python = ">=3.7"

dependencies = [
    "setuptools",
    "pre-commit",
    "requests",
    "tomli",
    "beautifulsoup4",
    "keyring",
    "keyrings.google-artifactregistry-auth",
]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
local_repo = "./main/local_repo"
