[build-system]

requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "local_repo"
version = "0.0.0"

classifiers = [
    # This package is local and is never published:
    "Private :: Do Not Upload",
]

# FT_84_11_73_28.supported_python_versions.md:
requires-python = ">=3.7"

dependencies = [
    "setuptools",
    "pre-commit",
    "requests",
    "tomli",
    "beautifulsoup4",
    # This is used for manual test.
    # See: FT_17_41_51_83.private_artifact_repo.md
    # "dummy_private",
]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
local_repo = "./main/local_repo"
