[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "metaprimer"
version = "0.1.0.dev2"
authors = [
    { name = "uvsmtid", email = "uvsmtid@gmail.com" },
]
description = "bootstrap beyond protoprimer"
readme = "readme.md"
# FT_84_11_73_28.supported_python_versions.md:
requires-python = ">=3.7"
license = { text = "MIT" }

keywords = [
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "protoprimer",
]

[project.optional-dependencies]
extra = []

[project.urls]
Homepage = "https://github.com/uvsmtid/metaprimer"
Repository = "https://github.com/uvsmtid/metaprimer"

[tool]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
metaprimer = "./main/metaprimer"
