[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "neoprimer"
version = "0.1.0"
authors = [
    { name = "uvsmtid", email = "uvsmtid@gmail.com" },
]
description = "TODO"
readme = "readme.md"
# FT_84_11_73_28: supported python versions:
requires-python = ">=3.7"
license = { text = "MIT" }

keywords = [
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "protoprimer",
]

[project.optional-dependencies]
extra = []

[project.urls]
Homepage = "https://github.com/uvsmtid/neoprimer"
Repository = "https://github.com/uvsmtid/neoprimer"

[tool]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
neoprimer = "./main/neoprimer"
