[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "protoprimer"
version = "0.0.11"
authors = [
    { name = "uvsmtid", email = "uvsmtid@gmail.com" },
]
description = "A single-touch bootstrap to start pre-venv code: self-contained, no-deps, zero-args-default, cross-platform way to escape from shell scripts in pure Python with extensible multi-stage DAG :rocket:"
readme = "readme.md"
# FT_84_11_73_28: supported python versions:
requires-python = ">=3.7"
license = { text = "MIT" }

keywords = [
    "venv",
    "virtual environment",

    "env",
    "environment",

    "dev",
    "development",

    "boot",
    "bootstrap",
    "bootstrapper",

    "init",
    "initialize",
    "initializer",

    "check",
    "checker",
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
extra = []

[project.urls]
Homepage = "https://github.com/uvsmtid/protoprimer"
Repository = "https://github.com/uvsmtid/protoprimer"

[tool]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
protoprimer = "./main/protoprimer"
