[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "protoprimer"
version = "0.6.0"

authors = [
    { name = "uvsmtid", email = "uvsmtid@gmail.com" },
]

# This is supposed to be synced with the `About` section on the `github.com` page:
# https://github.com/uvsmtid/protoprimer
description = "Escape the fragile mess of pre-venv shell scripts with a pure Python bootstrap wrapper: ðŸš€ â© single-touch, zero-args, self-contained, no-deps, cross-platform, testable init logic using standard tools to run apps in a custom environment isolated per repository"

readme = "readme.md"

# FT_84_11_73_28: supported python versions:
requires-python = ">=3.7"

license = { text = "MIT" }

keywords = [
    "venv",
    "virtual environment",

    "env",
    "environment",

    "dev",
    "development",

    "boot",
    "bootstrap",
    "bootstrapper",

    "init",
    "initialize",
    "initializer",

    "check",
    "checker",
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "freezegun",
]
extra = []

[project.urls]
Homepage = "https://github.com/uvsmtid/protoprimer"
Repository = "https://github.com/uvsmtid/protoprimer"

[tool]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
protoprimer = "./main/protoprimer"
